--- a/WebApplicationDemo/WebApplicationDemo.csproj
+++ b/WebApplicationDemo/WebApplicationDemo.csproj
@@ -145,7 +145,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\TasksDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -182,11 +182,11 @@
     <TypeScriptCompile Include="Content\Code\app.ts" />
     <TypeScriptCompile Include="Content\Code\app\contrrollers\main.ts" />
     <TypeScriptCompile Include="Content\Code\app\service\urls.ts" />
-    <TypeScriptCompile Include="Content\Code\home\controler\searchingCtrl.ts" />
+    <TypeScriptCompile Include="Content\Code\home\controler\tasksCtrl.ts" />
     <TypeScriptCompile Include="Content\Code\home\home.ts" />
     <TypeScriptCompile Include="Content\Code\infrastructure\directives\enterKey.ts" />
     <TypeScriptCompile Include="Content\Code\infrastructure\infrastructure.ts" />
-    <TypeScriptCompile Include="Content\Code\infrastructure\Models\user.ts" />
+    <TypeScriptCompile Include="Content\Code\infrastructure\Models\task.ts" />
     <TypeScriptCompile Include="Content\libs\typings\angular-ui-router\angular-ui-router.d.ts" />
     <TypeScriptCompile Include="Content\libs\typings\angularjs\angular-animate.d.ts" />
     <TypeScriptCompile Include="Content\libs\typings\angularjs\angular-component-router.d.ts" />
